Recondensed some of the files, added build script, made src directory

--- a/src/benchmarks.tex
+++ b/src/benchmarks.tex
@@ -1,6 +1,4 @@
 % -------------------------------------------- Benchmarks ----------------------------------------------------
 \section{Benchmarks}
-
-\input{bfludag}
-
-\input{batic}
+\subsection{FluDAG Benchmarks}
+\subsection{ATIC}
