--- a/src/main.tex
+++ b/src/main.tex
@@ -6,7 +6,18 @@
         {NASA Final Report}\\
         {\large University of Wisconsin-Madison}
 }
-\author{Paul Wilson, Andrew Davis, Chelsea D'Angelo, Nancy Granda-Duarte}
+\author{Andrew Davis\\
+       \texttt{andrew.davis@wisc.edu}
+       \and
+       Paul P.H. Wilson\\
+       \texttt{paul.wilson@wisc.edu}
+       \and
+       Chelsea D'Angelo\\
+       \texttt{chelsea.dangelo@wisc.edu}
+       \and
+       Nancy Granda-Duarte\\
+       \texttt{nancyg@wisc.edu}
+       }
 \date{\today}
 
 % ---------------------- packages to include ----------------------------------
