--- a/src/tools.tex
+++ b/src/tools.tex
@@ -3,13 +3,13 @@
 \section{Workflows and Tools}
 
 % Generate Hierarchy 
-\input{genhi}
+\subsection{Generate Hierarchy}
 
 % ReadOBJ
-\input{readobj}
+\subsection{ReadOBJ}
 
 % Combining Geometries
-\input{combine}
+\subsection{Combining Geometrie}
 
 % SRAGCodes
-\input{srag}
+\subsection{SRAGCodes}
