--- a/src/main.tex
+++ b/src/main.tex
@@ -1,5 +1,9 @@
 % ------------------------- document type -------------------------------------
 \documentclass[12pt]{article}
+\usepackage{layout} % show a page layout
+\setlength{\hoffset}{0.0in}
+\setlength{\oddsidemargin}{-.5in}
+\setlength{\textwidth}{.85\paperwidth}
 
 % ----------------------- title and authors -----------------------------------
 \title{
