Changed some of the Figure widths

--- a/src/phantom.tex
+++ b/src/phantom.tex
@@ -7,7 +7,10 @@
 
 \begin{figure}
  % Width = width of figure, {/path/to/figure.(png,pdf,jpg)}
- \includegraphics[width=90mm]{figs/phantom_ed.png}
+ \begin{centering}
+ \centering
+ \includegraphics[width=\paperwidth]{../figs/phantom_ed.png}
  \caption{Energy deposition in phantom}
  \label{fig:results_fig}
+ \end{centering}
 \end{figure}
