--- a/src/main.tex
+++ b/src/main.tex
@@ -1,9 +1,17 @@
 % ------------------------- document type -------------------------------------
 \documentclass[12pt]{article}
 \usepackage{layout} % show a page layout
+\usepackage{listings}
+\usepackage{xcolor}
 \setlength{\hoffset}{0.0in}
 \setlength{\oddsidemargin}{-.5in}
 \setlength{\textwidth}{.85\paperwidth}
+
+\lstset { %
+    language=C++,
+    backgroundcolor=\color{black!5}, % set backgroundcolor
+    basicstyle=\footnotesize,% basic font setting
+}
 
 % ----------------------- title and authors -----------------------------------
 \title{
