adding table of materials, still needs to be added into proper section

--- a/src/main.tex
+++ b/src/main.tex
@@ -25,10 +25,10 @@
        \texttt{paul.wilson@wisc.edu}
        \and
        Chelsea D'Angelo\\
-       \texttt{chelsea.dangelo@wisc.edu}
+       \texttt{cadangelo@wisc.edu}
        \and
        Nancy Granda-Duarte\\
-       \texttt{nancyg@wisc.edu}
+       \texttt{grandaduarte@wisc.edu}
        }
 \date{\today}
 
