adding combine_geoms, read_obj, and phantom sections

--- a/src/mats.tex
+++ b/src/mats.tex
@@ -1,4 +1,4 @@
-%\section{Materials}
+\section{Materials} \label{App:A1}
 
 %Material Compositions \\
 \begin{centering}
@@ -6,7 +6,7 @@
 \toprule
 \textbf{Material} & \textbf{Nuclide} & \textbf{Mass Fraction} \\ 
 \hline
-Subcutaneous_Fat & & \\
+Subcutaneous\_Fat & & \\
 \hline
 & H1 & 1.13774e+01 \\ 
 & H2 & 2.61509e-03 \\ 
@@ -49,7 +49,7 @@ Muscle & & \\
 & K40 & 4.78362e-05 \\ 
 & K41 & 2.82039e-02 \\ 
 \hline
-Visceral_Fat & & \\
+Visceral\_Fat & & \\
 \hline
 & H1 & 1.13774e+01 \\ 
 & H2 & 2.61509e-03 \\ 
@@ -96,7 +96,7 @@ Blood & & \\
 & Fe57 & 2.16037e-03 \\ 
 & Fe58 & 2.92544e-04 \\ 
 \hline
-Soft_Tissue_M & & \\
+Soft\_Tissue\_M & & \\
 \hline
 & H1 & 1.04976e+01 \\ 
 & H2 & 2.41287e-03 \\ 
@@ -119,7 +119,7 @@ Soft_Tissue_M & & \\
 & K40 & 2.39181e-05 \\ 
 & K41 & 1.41020e-02 \\ 
 \hline
-Soft_Tissue_F & & \\
+Soft\_Tissue\_F & & \\
 \hline
 & H1 & 1.05976e+01 \\ 
 & H2 & 2.43585e-03 \\ 
@@ -165,7 +165,7 @@ Skin & & \\
 & K40 & 1.19591e-05 \\ 
 & K41 & 7.05098e-03 \\ 
 \hline
-Lymph_Nodes & & \\
+Lymph\_Nodes & & \\
 \hline
 & H1 & 1.04776e+01 \\ 
 & H2 & 2.40827e-03 \\ 
@@ -241,7 +241,7 @@ Brain & & \\
 & K40 & 3.58772e-05 \\ 
 & K41 & 2.11529e-02 \\ 
 \hline
-Nasal_Layer & & \\
+Nasal\_Layer & & \\
 \hline
 & H1 & 1.04276e+01 \\ 
 & H2 & 2.39678e-03 \\ 
@@ -308,7 +308,7 @@ Lens & & \\
 & Cl35 & 7.47256e-02 \\ 
 & Cl37 & 2.52744e-02 \\ 
 \hline
-External_Nose & & \\
+External\_Nose & & \\
 \hline
 & H1 & 9.72776e+00 \\ 
 & H2 & 2.23592e-03 \\ 
@@ -362,7 +362,7 @@ Ears & & \\
 & Fe57 & 4.32074e-04 \\ 
 & Fe58 & 5.85089e-05 \\ 
 \hline
-Pituitary_Gland & & \\
+Pituitary\_Gland & & \\
 \hline
 & H1 & 1.04276e+01 \\ 
 & H2 & 2.39678e-03 \\ 
@@ -389,7 +389,7 @@ Pituitary_Gland & & \\
 & Fe57 & 4.32074e-04 \\ 
 & Fe58 & 5.85089e-05 \\ 
 \hline
-Salivary_Glands & & \\
+Salivary\_Glands & & \\
 \hline
 & H1 & 1.04276e+01 \\ 
 & H2 & 2.39678e-03 \\ 
@@ -416,7 +416,7 @@ Salivary_Glands & & \\
 & Fe57 & 4.32074e-04 \\ 
 & Fe58 & 5.85089e-05 \\ 
 \hline
-Oral_Cavity_Layer & & \\
+Oral\_Cavity\_Layer & & \\
 \hline
 & H1 & 1.04276e+01 \\ 
 & H2 & 2.39678e-03 \\ 
@@ -524,7 +524,7 @@ Pharynx & & \\
 & Fe57 & 4.32074e-04 \\ 
 & Fe58 & 5.85089e-05 \\ 
 \hline
-Spinal_Cord & & \\
+Spinal\_Cord & & \\
 \hline
 & H1 & 1.05876e+01 \\ 
 & H2 & 2.43355e-03 \\ 
@@ -710,7 +710,7 @@ Trachea & & \\
 & K40 & 2.39181e-05 \\ 
 & K41 & 1.41020e-02 \\ 
 \hline
-Breast_Fat_M & & \\
+Breast\_Fat\_M & & \\
 \hline
 & H1 & 1.13774e+01 \\ 
 & H2 & 2.61509e-03 \\ 
@@ -730,7 +730,7 @@ Breast_Fat_M & & \\
 & Cl35 & 7.47256e-03 \\ 
 & Cl37 & 2.52744e-03 \\ 
 \hline
-Breast_Glandular_M & & \\
+Breast\_Glandular\_M & & \\
 \hline
 & H1 & 1.05976e+01 \\ 
 & H2 & 2.43585e-03 \\ 
@@ -858,7 +858,7 @@ Spleen & & \\
 & Fe57 & 1.08018e-03 \\ 
 & Fe58 & 1.46272e-04 \\ 
 \hline
-Gall_Bladder_Wall & & \\
+Gall\_Bladder\_Wall & & \\
 \hline
 & H1 & 1.04276e+01 \\ 
 & H2 & 2.39678e-03 \\ 
@@ -945,7 +945,7 @@ Kidney & & \\
 & Fe57 & 8.64147e-04 \\ 
 & Fe58 & 1.17018e-04 \\ 
 \hline
-Small_Intestine & & \\
+Small\_Intestine & & \\
 \hline
 & H1 & 1.04676e+01 \\ 
 & H2 & 2.40597e-03 \\ 
@@ -999,7 +999,7 @@ Pancreas & & \\
 & Fe57 & 4.32074e-04 \\ 
 & Fe58 & 5.85089e-05 \\ 
 \hline
-Large_Intestine & & \\
+Large\_Intestine & & \\
 \hline
 & H1 & 1.04676e+01 \\ 
 & H2 & 2.40597e-03 \\ 
@@ -1172,7 +1172,7 @@ Epididymes & & \\
 & K40 & 2.39181e-05 \\ 
 & K41 & 1.41020e-02 \\ 
 \hline
-Fallopian_tubes & & \\
+Fallopian\_tubes & & \\
 \hline
 & H1 & 1.05976e+01 \\ 
 & H2 & 2.43585e-03 \\ 
@@ -1323,7 +1323,7 @@ Cartilage & & \\
 & Cl35 & 2.24177e-01 \\ 
 & Cl37 & 7.58233e-02 \\ 
 \hline
-Cortical_bone & & \\
+Cortical\_bone & & \\
 \hline
 & H1 & 3.56918e+00 \\ 
 & H2 & 8.20375e-04 \\ 
@@ -1369,7 +1369,7 @@ Teeth & & \\
 & K40 & 3.45617e-03 \\ 
 & K41 & 2.03773e+00 \\ 
 \hline
-spmc_Cranium & & \\
+spmc\_Cranium & & \\
 \hline
 & H1 & 5.93864e+00 \\ 
 & H2 & 1.36499e-03 \\ 
@@ -1405,7 +1405,7 @@ spmc_Cranium & & \\
 & Fe57 & 4.32074e-04 \\ 
 & Fe58 & 5.85089e-05 \\ 
 \hline
-spmc_Mandible & & \\
+spmc\_Mandible & & \\
 \hline
 & H1 & 9.95771e+00 \\ 
 & H2 & 2.28878e-03 \\ 
@@ -1441,7 +1441,7 @@ spmc_Mandible & & \\
 & Fe57 & 8.64147e-04 \\ 
 & Fe58 & 1.17018e-04 \\ 
 \hline
-spmc_Vertebrae_C & & \\
+spmc\_Vertebrae\_C & & \\
 \hline
 & H1 & 8.85796e+00 \\ 
 & H2 & 2.03600e-03 \\ 
@@ -1477,7 +1477,7 @@ spmc_Vertebrae_C & & \\
 & Fe57 & 1.29622e-03 \\ 
 & Fe58 & 1.75527e-04 \\ 
 \hline
-spmc_Vertebrae_T & & \\
+spmc\_Vertebrae\_T & & \\
 \hline
 & H1 & 9.67778e+00 \\ 
 & H2 & 2.22443e-03 \\ 
@@ -1513,7 +1513,7 @@ spmc_Vertebrae_T & & \\
 & Fe57 & 1.29622e-03 \\ 
 & Fe58 & 1.75527e-04 \\ 
 \hline
-spmc_Vertebrae_L & & \\
+spmc\_Vertebrae\_L & & \\
 \hline
 & H1 & 9.59779e+00 \\ 
 & H2 & 2.20605e-03 \\ 
@@ -1549,7 +1549,7 @@ spmc_Vertebrae_L & & \\
 & Fe57 & 1.29622e-03 \\ 
 & Fe58 & 1.75527e-04 \\ 
 \hline
-spmc_Sternum & & \\
+spmc\_Sternum & & \\
 \hline
 & H1 & 9.81774e+00 \\ 
 & H2 & 2.25661e-03 \\ 
@@ -1585,7 +1585,7 @@ spmc_Sternum & & \\
 & Fe57 & 1.51226e-03 \\ 
 & Fe58 & 2.04781e-04 \\ 
 \hline
-spmc_Ribs & & \\
+spmc\_Ribs & & \\
 \hline
 & H1 & 9.47782e+00 \\ 
 & H2 & 2.17848e-03 \\ 
@@ -1621,7 +1621,7 @@ spmc_Ribs & & \\
 & Fe57 & 1.29622e-03 \\ 
 & Fe58 & 1.75527e-04 \\ 
 \hline
-spmc_Scapulae & & \\
+spmc\_Scapulae & & \\
 \hline
 & H1 & 9.26787e+00 \\ 
 & H2 & 2.13022e-03 \\ 
@@ -1657,7 +1657,7 @@ spmc_Scapulae & & \\
 & Fe57 & 8.64147e-04 \\ 
 & Fe58 & 1.17018e-04 \\ 
 \hline
-spmc_Clavicles & & \\
+spmc\_Clavicles & & \\
 \hline
 & H1 & 9.68777e+00 \\ 
 & H2 & 2.22673e-03 \\ 
@@ -1693,7 +1693,7 @@ spmc_Clavicles & & \\
 & Fe57 & 6.48111e-04 \\ 
 & Fe58 & 8.77633e-05 \\ 
 \hline
-spmc_Os_Coxae & & \\
+spmc\_Os\_Coxae & & \\
 \hline
 & H1 & 9.76775e+00 \\ 
 & H2 & 2.24512e-03 \\ 
@@ -1729,7 +1729,7 @@ spmc_Os_Coxae & & \\
 & Fe57 & 1.08018e-03 \\ 
 & Fe58 & 1.46272e-04 \\ 
 \hline
-spmc_Sacrum & & \\
+spmc\_Sacrum & & \\
 \hline
 & H1 & 9.45783e+00 \\ 
 & H2 & 2.17388e-03 \\ 
@@ -1765,7 +1765,7 @@ spmc_Sacrum & & \\
 & Fe57 & 1.29622e-03 \\ 
 & Fe58 & 1.75527e-04 \\ 
 \hline
-spmc_Humera_proximal & & \\
+spmc\_Humera\_proximal & & \\
 \hline
 & H1 & 9.96771e+00 \\ 
 & H2 & 2.29108e-03 \\ 
@@ -1801,7 +1801,7 @@ spmc_Humera_proximal & & \\
 & Fe57 & 6.48111e-04 \\ 
 & Fe58 & 8.77633e-05 \\ 
 \hline
-spmc_Humera_distal & & \\
+spmc\_Humera\_distal & & \\
 \hline
 & H1 & 9.48782e+00 \\ 
 & H2 & 2.18077e-03 \\ 
@@ -1833,7 +1833,7 @@ spmc_Humera_distal & & \\
 & Ca46 & 2.42622e-04 \\ 
 & Ca48 & 1.18359e-02 \\ 
 \hline
-spmc_Radii_proximal & & \\
+spmc\_Radii\_proximal & & \\
 \hline
 & H1 & 1.02476e+01 \\ 
 & H2 & 2.35542e-03 \\ 
@@ -1865,7 +1865,7 @@ spmc_Radii_proximal & & \\
 & Ca46 & 1.49976e-04 \\ 
 & Ca48 & 7.31635e-03 \\ 
 \hline
-spmc_Radii_distal & & \\
+spmc\_Radii\_distal & & \\
 \hline
 & H1 & 9.90772e+00 \\ 
 & H2 & 2.27729e-03 \\ 
@@ -1897,7 +1897,7 @@ spmc_Radii_distal & & \\
 & Ca46 & 1.91712e-04 \\ 
 & Ca48 & 9.35240e-03 \\ 
 \hline
-spmc_Ulnae_proximal & & \\
+spmc\_Ulnae\_proximal & & \\
 \hline
 & H1 & 9.37784e+00 \\ 
 & H2 & 2.15550e-03 \\ 
@@ -1929,7 +1929,7 @@ spmc_Ulnae_proximal & & \\
 & Ca46 & 2.55922e-04 \\ 
 & Ca48 & 1.24848e-02 \\ 
 \hline
-spmc_Ulnae_distal & & \\
+spmc\_Ulnae\_distal & & \\
 \hline
 & H1 & 9.62779e+00 \\ 
 & H2 & 2.21294e-03 \\ 
@@ -1961,7 +1961,7 @@ spmc_Ulnae_distal & & \\
 & Ca46 & 2.25193e-04 \\ 
 & Ca48 & 1.09857e-02 \\ 
 \hline
-spmc_Wrists_and_hands & & \\
+spmc\_Wrists\_and\_hands & & \\
 \hline
 & H1 & 9.48782e+00 \\ 
 & H2 & 2.18077e-03 \\ 
@@ -1993,7 +1993,7 @@ spmc_Wrists_and_hands & & \\
 & Ca46 & 2.42622e-04 \\ 
 & Ca48 & 1.18359e-02 \\ 
 \hline
-spmc_Femora_proximal & & \\
+spmc\_Femora\_proximal & & \\
 \hline
 & H1 & 9.36785e+00 \\ 
 & H2 & 2.15320e-03 \\ 
@@ -2029,7 +2029,7 @@ spmc_Femora_proximal & & \\
 & Fe57 & 4.32074e-04 \\ 
 & Fe58 & 5.85089e-05 \\ 
 \hline
-spmc_Femora_distal & & \\
+spmc\_Femora\_distal & & \\
 \hline
 & H1 & 9.54781e+00 \\ 
 & H2 & 2.19456e-03 \\ 
@@ -2061,7 +2061,7 @@ spmc_Femora_distal & & \\
 & Ca46 & 2.35283e-04 \\ 
 & Ca48 & 1.14779e-02 \\ 
 \hline
-spmc_Patellae & & \\
+spmc\_Patellae & & \\
 \hline
 & H1 & 9.54781e+00 \\ 
 & H2 & 2.19456e-03 \\ 
@@ -2093,7 +2093,7 @@ spmc_Patellae & & \\
 & Ca46 & 2.35283e-04 \\ 
 & Ca48 & 1.14779e-02 \\ 
 \hline
-spmc_Tibiae_proximal & & \\
+spmc\_Tibiae\_proximal & & \\
 \hline
 & H1 & 9.90772e+00 \\ 
 & H2 & 2.27729e-03 \\ 
@@ -2125,7 +2125,7 @@ spmc_Tibiae_proximal & & \\
 & Ca46 & 1.90795e-04 \\ 
 & Ca48 & 9.30765e-03 \\ 
 \hline
-spmc_Tibiae_distal & & \\
+spmc\_Tibiae\_distal & & \\
 \hline
 & H1 & 9.79775e+00 \\ 
 & H2 & 2.25201e-03 \\ 
@@ -2157,7 +2157,7 @@ spmc_Tibiae_distal & & \\
 & Ca46 & 2.05013e-04 \\ 
 & Ca48 & 1.00013e-02 \\ 
 \hline
-spmc_Fibulae_proximal & & \\
+spmc\_Fibulae\_proximal & & \\
 \hline
 & H1 & 1.03776e+01 \\ 
 & H2 & 2.38529e-03 \\ 
@@ -2189,7 +2189,7 @@ spmc_Fibulae_proximal & & \\
 & Ca46 & 1.33465e-04 \\ 
 & Ca48 & 6.51088e-03 \\ 
 \hline
-spmc_Fibulae_distal & & \\
+spmc\_Fibulae\_distal & & \\
 \hline
 & H1 & 9.53781e+00 \\ 
 & H2 & 2.19226e-03 \\ 
@@ -2221,7 +2221,7 @@ spmc_Fibulae_distal & & \\
 & Ca46 & 2.36659e-04 \\ 
 & Ca48 & 1.15451e-02 \\ 
 \hline
-spmc_Ankles_and_feet & & \\
+spmc\_Ankles\_and\_feet & & \\
 \hline
 & H1 & 9.54781e+00 \\ 
 & H2 & 2.19456e-03 \\ 
@@ -2253,7 +2253,7 @@ spmc_Ankles_and_feet & & \\
 & Ca46 & 2.35283e-04 \\ 
 & Ca48 & 1.14779e-02 \\ 
 \hline
-spmc_Humera_upper_shaft & & \\
+spmc\_Humera\_upper\_shaft & & \\
 \hline
 & H1 & 1.11774e+01 \\ 
 & H2 & 2.56913e-03 \\ 
@@ -2283,7 +2283,7 @@ spmc_Humera_upper_shaft & & \\
 & Fe57 & 6.48111e-04 \\ 
 & Fe58 & 8.77633e-05 \\ 
 \hline
-spmc_Humera_lower_shaft & & \\
+spmc\_Humera\_lower\_shaft & & \\
 \hline
 & H1 & 1.14674e+01 \\ 
 & H2 & 2.63577e-03 \\ 
@@ -2303,7 +2303,7 @@ spmc_Humera_lower_shaft & & \\
 & Cl35 & 7.47256e-03 \\ 
 & Cl37 & 2.52744e-03 \\ 
 \hline
-spmc_Radii_shaft & & \\
+spmc\_Radii\_shaft & & \\
 \hline
 & H1 & 1.14674e+01 \\ 
 & H2 & 2.63577e-03 \\ 
@@ -2323,7 +2323,7 @@ spmc_Radii_shaft & & \\
 & Cl35 & 7.47256e-03 \\ 
 & Cl37 & 2.52744e-03 \\ 
 \hline
-spmc_Ulnae_shaft & & \\
+spmc\_Ulnae\_shaft & & \\
 \hline
 & H1 & 1.14774e+01 \\ 
 & H2 & 2.63807e-03 \\ 
@@ -2343,7 +2343,7 @@ spmc_Ulnae_shaft & & \\
 & Cl35 & 7.47256e-03 \\ 
 & Cl37 & 2.52744e-03 \\ 
 \hline
-spmc_Femora_upper_shaft & & \\
+spmc\_Femora\_upper\_shaft & & \\
 \hline
 & H1 & 1.11674e+01 \\ 
 & H2 & 2.56683e-03 \\ 
@@ -2373,7 +2373,7 @@ spmc_Femora_upper_shaft & & \\
 & Fe57 & 6.48111e-04 \\ 
 & Fe58 & 8.77633e-05 \\ 
 \hline
-spmc_Femora_lower_shaft & & \\
+spmc\_Femora\_lower\_shaft & & \\
 \hline
 & H1 & 1.14674e+01 \\ 
 & H2 & 2.63577e-03 \\ 
@@ -2393,7 +2393,7 @@ spmc_Femora_lower_shaft & & \\
 & Cl35 & 7.47256e-03 \\ 
 & Cl37 & 2.52744e-03 \\ 
 \hline
-spmc_Tibiae_shaft & & \\
+spmc\_Tibiae\_shaft & & \\
 \hline
 & H1 & 1.14674e+01 \\ 
 & H2 & 2.63577e-03 \\ 
@@ -2413,7 +2413,7 @@ spmc_Tibiae_shaft & & \\
 & Cl35 & 7.47256e-03 \\ 
 & Cl37 & 2.52744e-03 \\ 
 \hline
-spmc_Fibulae_shaft & & \\
+spmc\_Fibulae\_shaft & & \\
 \hline
 & H1 & 1.14674e+01 \\ 
 & H2 & 2.63577e-03 \\ 
