--- a/src/main.tex
+++ b/src/main.tex
@@ -38,6 +38,8 @@
 \usepackage{microtype} 	
 \usepackage{caption}	
 \usepackage{multirow}  	
+\usepackage{longtable}
+\usepackage{booktabs}
 \usepackage{amsmath}  	
 \usepackage{color,soul} 
 \usepackage{lipsum}
@@ -65,6 +67,10 @@
 \input{benchmarks}
 
 \input{analysis}
+
+\newpage
+\appendix
+\input{mats}
 
 \end{document}
 
