--- a/src/tools.tex
+++ b/src/tools.tex
@@ -33,6 +33,63 @@ meshset has the faces as members.  The vertices are added to a global vertex mes
 
 % Generate Hierarchy 
 \subsection{Generate Hierarchy}
+For successful radiation transport, all space needs to be explicitly defined by a single material. 
+Geometry files that only contain surface mesh information and no sense of hierarchy amongst the surfaces
+have inadequate information.  More specifically, there is no information about which surfaces are inside,
+outside, or beside each other.  \texttt{Generate\_hierarchy} is a tool within MOAB that was created to
+make these files suitable for radiation transport calculations.  It determines the spatial relationship
+amongst surfaces and then applies a hierarchical structure based upon those relationships. As an example, 
+Figure~\ref{fig:spheres} depicts a 2D slice of nested surfaces.  Consider surface B.  It is completely enclosed by surface A, 
+encloses surface D, and is beside surface C.  These hierarchical relationships are necessary so that 
+volumetric entities can be determined.  For example, it is now known that volume B is the space enclosed by 
+surface B, but outside of surface D.
+
+\begin{figure}
+ % Width = width of figure, {/path/to/figure.(png,pdf,jpg)}
+ \begin{centering}
+ \centering
+ \includegraphics[width=\paperwidth]{../figs/nested_spheres.png}
+ \caption{Nested spheres}
+ \label{fig:spheres}
+ \end{centering}
+\end{figure}
+
+There are a few fundamental assumptions made about the geometry file read in by this tool.  It is assumed 
+that each surface is closed, that there are no overlapping surfaces, and that there is a volume meshset that 
+exactly corresponds to each surface meshset.  It is also assumed that the volume and surface meshsets have a 
+parent-child relationship and no other hierarchical relationships exist amongst the meshsets.  The surface 
+meshset has forward sense with respect to the volume meshset it exactly corresponds with.  \texttt{Generate\_hierarchy}
+has two main public-facing functions: \texttt{build\_hierarchy} and \texttt{construct\_topology}.  
+
+\texttt{Build\_hierarchy} tests every surface in the geometry and decides where it belongs in a hierarchical tree.  
+The hierarchical relationships will actually be made between volume meshsets.  At this point, these are the 
+meshsets that exactly correspond to the surface meshsets.  The tree is formed by testing a point on the surface 
+coming into the tree against the volumes already in the tree. Looking again at Figure~\ref{fig:spheres}, let’s assume that 
+surface A is the first to be tested.  The tree is initially empty so volume A is automatically placed at the top.  
+Assume surface C is tested next.  It is found to be inside of volume A, so it becomes a child.  Surface D is next 
+and found to also be inside volume A, but neither inside or outside of volume C.  Volume D becomes another child of A.  
+Last, surface B is tested.  It is found to be inside of A, outside of B, and beside C.  Therefore, volume B becomes a 
+child of volume A, and a parent of volume D.  Because a volume can only have one parent, the parent-child linkage 
+between volume A and volume D is broken and reformed between B and D.  The constructed tree is shown in Figure \ref{fig:tree} below.
+
+\begin{figure}
+ % Width = width of figure, {/path/to/figure.(png,pdf,jpg)}
+ \begin{centering}
+ \centering
+ \includegraphics[width=\paperwidth]{../figs/tree.png}
+ \caption{Hierarchical tree build from nested spheres geometry.}
+ \label{fig:tree}
+ \end{centering}
+\end{figure}
+
+After the hierarchical structure has been established, DAGMC-appropriate volumes are created by \texttt{construct\_topology}.  
+This is accomplished by setting the surface sense and creating the hierarchical parent-child linkages between the 
+surface meshsets.  Each surface has two volumes associated with it; one inside and one outside.  The surface has 
+sense forward with respect to the volume inside and as mentioned earlier, this is already set. This function sets 
+the reverse sense of the surface to the volume directly above it in the tree.  For example, surface B has forward 
+sense with respect to volume B and reverse sense with respect to volume A.  Because surface A is the outermost surface, 
+it has forward sense with respect to volume A and no reverse sense.  Surfaces with no reverse sense lie in the 
+implicit compliment.
 
 % Combining Geometries
 \subsection{Combining Geometries}
