--- a/src/main.tex
+++ b/src/main.tex
@@ -3,6 +3,8 @@
 \usepackage{layout} % show a page layout
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{graphicx}
+\usepackage{subcaption}
 \setlength{\hoffset}{0.0in}
 \setlength{\oddsidemargin}{-.5in}
 \setlength{\textwidth}{.85\paperwidth}
