edits on phantom section-- no new results or figures yet

--- a/src/phantom.tex
+++ b/src/phantom.tex
@@ -55,7 +55,7 @@ of this scale to be run.
  
 %Figure~\ref{fig:results_fig} which is shown below.
 
-\begin{figure}
+\begin{figure} [h!]
  % Width = width of figure, {/path/to/figure.(png,pdf,jpg)}
  \begin{centering}
  \centering
